# python_packaging_example

./: .gitignore  LICENSE  README.md  pyproject.toml
example_package/: __init__.py  cli.py  example_module_1.py
example_package/example_subpackage/: __init__.py  example_module_2.py
